2011-04-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/boot/ptyout.boot: Add source as comments to the
	output of BOOTCLAM.

2011-04-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-search.boot, src/interp/clam.boot,
	src/interp/i-toplev.boot, src/interp/Makefile.in:
	Fix recent breakage.

2011-04-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/postpar.boot, src/interp/property.lisp,
	src/interp/compiler.boot, src/interp/Makefile.in,
	src/interp/g-boot.boot, src/interp/spad.lisp:
	Remove old Boot.


2011-04-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/outform.spad.pamphlet,
	src/interp/record.boot, src/interp/c-doc.boot,
	src/interp/nlib.lisp, src/interp/sys-pkg.lisp,
	src/interp/br-saturn.boot, src/interp/Makefile.in,
	src/interp/util.lisp, src/interp/i-output.boot,
	src/interp/profile.boot, src/interp/comp.lisp,
	src/interp/bootlex.lisp, src/interp/g-util.boot,
	src/interp/lisplib.boot: Misc cleanups.

2011-04-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/sys-pkg.lisp, src/interp/patches.lisp,
	src/interp/util.lisp, src/interp/Makefile.in,
	src/boot/Makefile.in: Use Shoe for ')boot' command.

2011-04-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Make underscores significant in Shoe names.
	* src/boot/btscan2.boot: Keep underscores.
	src/boot/compiled/*, src/interp/parsing.lisp,
	src/interp/macros.lisp, src/interp/s-parser.boot:
	Update.

2011-04-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/sfsfun.boot: c__hyper0f1(): Fix translation form Lisp.

2011-04-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/boot/initial-env.lisp, src/boot/ptyout.boot: Clean up,
	make more robust, add STTOSEX().
	src/boot/compiled/ptyout.clisp: update.

2011-04-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/topics.boot: Fix incompatibility with Shoe.

2011-04-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* contrib/emacs/Makefile.in: Copy gen-cpl.lisp befor use.
