@@ -172,11 +172,11 @@ NRTisRecurrenceRelation(op,body,minivectorName) ==
   pcl := [x for x in pcl | not (x is [''T,:mess] and
     (CONTAINED('throwMessage,mess) or
       CONTAINED('throwKeyedMsg,mess)))]
-  integer := EVALFUN $Integer
+  integer := EVAL $Integer
   iequalSlot:=compiledLookupCheck("=",'((Boolean) $ $),integer)
   lesspSlot:=compiledLookupCheck("<",'((Boolean) $ $),integer)
   bf := '(Boolean)
-  notpSlot:= compiledLookupCheck("not",'((Boolean)(Boolean)),EVALFUN bf)
+  notpSlot := compiledLookupCheck("not", '((Boolean)(Boolean)), EVAL bf)
   for [p,c] in pcl repeat
     p is ['SPADCALL,sharpVar,n1,['ELT,=minivectorName,slot]]
       and EQ(iequalSlot,$minivector.slot) =>
